# educacao-global-ai-agent

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: architecture.md  codex_usage.md  data_dictionary.md  video_script.md
n8n/: README-n8n.md  workflow.json
notebooks/: exploratory_analysis.ipynb
skills/education-insight-skill/: SKILL.md  examples.md  prompt_template.md  schema.json
src/: charts.py  clean_data.py  comparisons.py  config.py  exporters.py  indicators.py  load_data.py  main.py  metrics.py  openai_client.py  rankings.py  report_generator.py  transformations.py  utils.py
tests/: test_clean_data.py  test_comparisons.py  test_indicators.py  test_metrics.py  test_rankings.py
